[package]
name = "transfer-progress"
version = "0.1.0"
description = "Easily monitor the transfer of bytes from a reader to a writer"
readme = "README.md"
authors = ["Michael Connor Buchan <mikey@blindcomputing.org"]
repository = "https://github.com/mcb2003/transfer-progress-rs"
license = "MIT/Apache-2.0"
edition = "2018"

[features]
default = ["bytesize"]

[dependencies]
bytesize = {version = "1.1.0", optional = true}
progress-streams = "1.1.0"
